--- a/index.html
+++ b/index.html
@@ -115,19 +115,19 @@ img.map-image:hover {
 </map>
 </div>
 
-<article>
-    <h2>Instructions</h2>
-    <p>Click a state to view detailed articles with multimedia, tables, and lists describing each state's:</p>
-    <ul>
-        <li>History</li>
-        <li>Famous places</li>
-        <li>Food and drinks</li>
-        <li>Beaches</li>
-        <li>Famous artists</li>
-        <li>Movies filmed</li>
-    </ul>
-</article>
-
+<footer style="background:#1b75bc; color:white; padding:30px 20px; text-align:center;">
+    <center>
+        <p>Email Me: 
+            <href="mailto:20256204@ubaguio.edu" style="color:white; text-decoration:none; font-weight:bold;"> May Joy Agunod</a> 
+        </p>
+        <p>Connect with me: 
+            <a href="https://www.facebook.com/mayjoy2520" target="_blank" style="color:white; text-decoration:none; margin:0 8px;"></a>Facebook  |
+            <a href="https://www.instagram.com/joyylvrrrrr" target="_blank" style="color:white; text-decoration:none; margin:0 8px;">Instagram</a>
+        </p>
+        <p>2025 May Joy Agunod. All rights reserved®</p>
+    </center>
+</footer>
+    
 </main>
 </body>
 </html>
