--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@ img.map-image:hover {
 <body>
 
 <header>
-<h1>Interactive Map of the United States</h1>
+<h1>Map of the United States</h1>
 </header>
 
 <main>
